# OpenEcho

./: .gitignore  README.md  main.py  package-lock.json  package.json  projects.json  requirements.txt
backend/: audio_processing.py  classifier_service.py  metadata_loader.py  paths.py  project_store.py  server.py  whombat_aoef.py
backend/inference/: bacpipe_bat_adapter.py  bacpipe_provider.py  bacpipe_worker.py  bat_label_map.csv  bat_label_map.py
public/: index.html  manifest.json
scripts/: build_dmg.mjs  build_python_sidecar.py  dev-tauri.mjs  run-tauri.mjs  run_python_sidecar_build.mjs  setup_tf_worker.sh
scripts/pyinstaller_hooks/: hook-bacpipe.py  hook-torch.py
src/: App.css  App.js
src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppDialogs.js  BarChart.js  MainContent.js  MapContainer.js  ProjectSidebar.js  RecordingSidebar.js  ResponsiveVirtualList.js  SpeciesEditorDialog.js  SpeciesLabelList.js  Spectrogram.js
src/lib/: backendBridge.js
